# TextFinder

./: CMakeLists.txt  README.md  input.txt  textfinder.cpp  textfinder.h  textfinder.qrc  textfinder.ui
